tests/NormalTests/paczka1/fuzzy1/19787298.err
Error in line 8: 2AN S495 63,8
Error in line 21: L1kxhe A357 38,4
Error in line 31: A357 Sq10 48,5
Error in line 29: pvU0c9 S210 113,3
